<resources>
    <string name="app_name">IntelliQuest</string>

    <!--SignInFragment-->
    <string name="signin_btn_accept_text">SignIn</string>
    <string name="signin_input_email_text">Email</string>
    <string name="signin_input_pass_text">Password</string>
    <string name="signin_with_google">Sign in with google</string>
    <string name="signin_text">SignIn</string>
    <string name="signin_goto_signup">Don\'t have an account yet? SignUp</string>
    <string name="signin_btn_skip">Or skip</string>

    <!--IntroFragment-->
    <string name="intro_pass_btn_text">Pass</string>
    <string name="intro_test_description">Test description</string>

    <!--SignUpFragment-->
    <string name="signup_date_birth">Date birth</string>
    <string name="signup_date_email">Email</string>
    <string name="signup_case_male">Male</string>
    <string name="signup_case_female">Female</string>
    <string name="signup_password">Password</string>
    <string name="signup_rep_password">Repeat password</string>
    <string name="signup_accept">SignUp</string>

    <!--QuestionnaireIntroduceFragment-->
    <string name="questionnaire_intro_begin">Begin</string>
    <string name="questionnaire_intro_description">Description</string>

    <!-- QuestionsAdapter-->
    <string name="item_question_no_btn">No</string>
    <string name="item_question_yes_btn">Yes</string>
    <string name="dialog_progress_loading">Please stand by…</string>

    <string name="questionnaire_back_pressed_message">Press once again to leave questionnaire</string>

    <!--Summary-->
    <string name="no_summary_description">Here you will see your summary.\nPlease press the button below to pass the questionnaire</string>
    <string name="summary_pass_questionnaire_btn">Pass questionnaire</string>
    <string name="summary">Summary</string>
    <string name="summary_points">Points: %d/%d</string>

    <!--FeatureType-->
    <string name="auth_proposal_title">Want to retry to pass the questionnaire?</string>
    <string name="auth_proposal_btn">Retry to pass</string>
    <string name="menu_account">Account</string>

    <!--IntroFragment-->
    <string name="intro_page_1">Welcome! This questionnaire is supposed to associate your temperaments features to defined ranges</string>
    <string name="intro_page_2">That means that any of your answer could reflect on the result of the questionnaire</string>
    <string name="intro_page_3">There are a few characteristics of human temperaments. You have to choose between positive and negative answers. So keep going and good luck!</string>

    <!--PersonalPageFragment-->
    <string name="personal_logout">Logout</string>
    <string name="receive_personal_error">Oops… Sorry but it seems you are requesting not existed page, please retry</string>
    <string name="personal_mail">Mail: %s</string>
    <string name="personal_gender">Gender: %s</string>
    <string name="personal_date_birth">Date birth: %s</string>
    <string name="personal_date_registered">Date registered: %s</string>
    <string name="personal_retry_btn">Retry</string>

    <!--StatisticsFragment-->
    <string name="no_statistics_description">Oops… It seems we cannot to provide you some statistics yet.\nPlease try later</string>
    <string name="no_statistics_refresh_btn">Refresh</string>

    <string name="privacy">Privacy</string>
    <string name="honesty_privacy_middle">Honesty and privancy balanced</string>
    <string name="honesty">Honesty</string>

    <string name="introversion">Introversion</string>
    <string name="introversion_introversion_middle">Extraversion and introversion balanced</string>
    <string name="extraversion">Extraversion</string>

    <string name="rigidity">Rigidity</string>
    <string name="rigidity_plasticity_middle">Rigidity and plasticity balanced</string>
    <string name="plasticity">Plasticity</string>

    <string name="activity">Activity</string>
    <string name="activity_passivity_middle">Activity and passivity balanced</string>
    <string name="passivity">Passivity</string>

    <string name="excitability">Excitability</string>
    <string name="excitability_balance_middle">Excitability and balance balanced</string>
    <string name="balance">Balance</string>

    <string name="reaction">Reaction</string>
    <string name="reaction_tempo_middle">Reaction and tempo balanced</string>
    <string name="tempo">Tempo</string>

    <string name="summary_annotation">Your result is: %s</string>
</resources>
