<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/signup_date_email"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_input_email_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_input_date_birth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/signup_date_birth"
        app:layout_constraintTop_toBottomOf="@id/signup_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_input_date_birth_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/signup_radio_group_gender"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_input_date_birth"
        app:layout_constraintTop_toBottomOf="@id/signup_input_date_birth">

        <RadioButton
            android:id="@+id/signup_radio_male"
            android:text="@string/signup_case_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/signup_radio_female"
            android:text="@string/signup_case_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/signup_password"
        app:layout_constraintTop_toBottomOf="@id/signup_radio_group_gender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_input_password_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_input_rep_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/signup_rep_password"
        app:layout_constraintTop_toBottomOf="@id/signup_input_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_input_rep_password_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/signup_input_rep_password"
        android:layout_margin="16dp"
        android:text="@string/signup_accept"
        android:id="@+id/signup_btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>