<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="64dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:layout_behavior=".presentation.view.ScalableFitBehaviour"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="64dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signin_container"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/signin_btn_with_google"
        app:layout_constraintTop_toBottomOf="@+id/ic_logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signin_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/signin_input_email_text"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signin_input_email_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signin_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/signin_input_pass_text"
                app:counterMaxLength="16"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/signin_input_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signin_input_pass_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signin_btn_signin"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/signin_btn_accept_text"
                android:textDirection="firstStrongRtl"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signin_input_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn_goto_signup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/signin_goto_signup"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/signin_container"
        app:layout_constraintStart_toStartOf="@id/signin_container"
        app:layout_constraintTop_toBottomOf="@id/signin_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn_with_google"
        style="@style/AppTheme.Button.GoogleStyledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signin_with_google"
        app:icon="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>